--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "graphviz>=0.20.3",
     "streamlit>=1.44.1",
+    "sympy>=1.13.3",
 ]
 
 [dependency-groups]
