--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "graphviz>=0.20.3",
+    "matplotlib>=3.10.1",
     "streamlit>=1.44.1",
     "sympy>=1.13.3",
 ]
