--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "graphviz>=0.20.3",
     "matplotlib>=3.10.1",
-    "streamlit>=1.44.1",
+    "streamlit<=1.40.0", # streamlit canvas currently does not run in above version
     "streamlit-drawable-canvas>=0.9.3",
     "sympy>=1.13.3",
 ]
